test/badVectorSyntax.slq

def main(){
    y:=0:!ğ”¹;
    if 1:!ğ”¹{
        y=1:!ğ”¹;
    }else{
        y=[]:!ğ”¹[0]; // error
    }
    return y;
}
